--- a/content/posts/2025/03/2025-03-12-leica-m9p.zh.md
+++ b/content/posts/2025/03/2025-03-12-leica-m9p.zh.md
@@ -1,5 +1,5 @@
 ---
-title: "三入徕卡M9：全画幅CCD的末代绝唱"
+title: "徕卡M9P：全画幅CCD的末代绝唱"
 date: 2025-03-12T22:43:43-04:00
 series:
 - camera
@@ -14,55 +14,153 @@ tags:
 - sonnar
 - voigtlander
 - septon
-- quinon
-- steinheil
+- zeiss
+- ultron
 - chinese
 slug: "Leica M9P"
-featured_image: 2025/03/12T22:43:43/04:00.JPG
-draft: true
+featured_image: 2025/03/12/m9p.jpg
 ---
 
-兜兜转转，回到起点。
+兜兜转转，不离不弃。
 <!--more-->
 
-# 兜兜转转
+# 辞旧迎新
 
 我的第一台旁轴相机是[徕卡M9]({{< ref "/posts/2018/06/2018-06-02-a-sip-of-leica-m9.zh.md" >}})[^1]：当时啥也不懂，随便从相机店买了一台最普通的黑漆版本，哪知CCD传感器是早期编号，没用多久就发现传感器有腐蚀，忍痛低价出手，怕CCD的坑太深，便转头专心玩胶片去了。
 
-三年后，我成了半个器材党，抵抗不了全画幅CCD的魅力，[重拾M9]({{< ref "/posts/2021/11/2021-11-13-m9-nikkor.zh.md" >}})[^2]，挑了一台钢灰色的M9，官方更换ID15的传感器（咨询了徕卡美国分部验证更换日期），让众多老镜头在这块柯达CCD上发挥余热。
+{{< img src="/images/2018/2018-06/02/title-image-1.jpg" >}}
+
+三年后，我成了半个器材党，抵抗不了全画幅CCD的魅力，[重拾M9]({{< ref "/posts/2021/11/2021-11-13-m9-nikkor.zh.md" >}})[^2]，挑了一台钢灰色漆面的版本，官方更换ID15的传感器（咨询后发现是在徕卡美国新泽西维修中心更换的），让众多老镜头在这块柯达CCD上发挥余热。
+
+{{< img src="/images/2021/11/13/m9-nikkor-aperture.jpg" title="M9钢灰色" caption="镜头是Nikkor-S.C. 5cm 1.4" >}}
 
 四年后的今天，无意间在论坛蹲到这台M9P，相对少见的银铬配色，德国原厂更换的ID15传感器。我知道，是时候辞旧迎新了。
 
+{{< img src="/images/2025/03/12/m9-m9p.JPG" title="合影留念" caption="钢灰色的M9跟银铬色的M9P" >}}
+
 # 黄斑校准
 
-有趣的是，这台M9P让我学会了如何校准徕卡的黄斑：刚拿到手的时候，这台M9P的黄斑在无限远不重合，实际焦平面比无限远更近。我找来L型六角扳手调节机身上黄斑联动的那个圆柱体后，无限远是重合了，但近处对焦时焦平面又会靠前。
+有趣的是，玩了这么久的旁轴，这台M9P让我第一次学会了如何校准徕卡M机的黄斑：刚拿到手的时候，这台M9P在无限远对焦不重合，实际焦平面比无限远更近。我找来L型六角扳手调节机身上黄斑联动的那个圆柱体后，无限远是重合了，但近处对焦时焦平面又会靠前。
 
-最后发现，得用一字螺丝刀配合六角扳手一起才能达到精确校准。DIY手动校准黄斑全网最详细的教程帖贴在这里作为参考：[l-camera-forum](https://www.l-camera-forum.com/topic/118043-m9-coincidence-at-infinity/?do=findComment&comment=1292675)[^3]。这个论坛老哥的手绘原理图解释得非常清楚，大赞。我之前也校准过巧思RF的黄斑（也是无限远有点不重合），但RF需要把机顶的一个小塑料盖掀开（很紧！），掀开后再把螺丝刀伸进去拧，对比之下还是徕卡的校准方法更方便可靠。
+最后逛论坛才发现，得用一字螺丝刀配合六角扳手一起才能达到精确校准。DIY手动校准黄斑全网最详细的教程贴在这里作为参考：[l-camera-forum](https://www.l-camera-forum.com/topic/118043-m9-coincidence-at-infinity/?do=findComment&comment=1292675)[^3]（这个手绘原理图解释得非常清楚，大赞）。我之前也校准过巧思RF的黄斑（也是无限远有点不重合），但RF需要把机顶的一个小塑料盖掀开（很紧！），再把螺丝刀伸进洞里去拧，对比之下还是徕卡的校准方法更方便可靠。
+
+{{< img src="/images/2025/03/12/repair.png" title="手绘原理图" caption="解释得非常清楚，大赞" >}}
+
 
 # 颜色调教
 
-徕卡和柯达当年合作推出M9系列时，依然处在胶片摄影向数码摄影过渡的时期。据说，为了吸引庞大而顽固的徕卡胶片死忠用户，这台M9的直出色彩调教很大程度上借鉴了柯达Kodachrome正片的成像风格。光线好且光比不大的白天（日出日落时分），或者干净光源下的夜晚，M9的直出JPG确实很容易让人惊艳，但不太靠谱的自动白平衡也经常会让直出色彩偏色严重，尤其拍人时肤色会显得很不自然。
+徕卡和柯达当年合作推出M9系列时，依然处在胶片摄影向数码摄影过渡的时期。据说，为了吸引庞大而顽固的徕卡胶片死忠用户，这台M9的直出色彩调教很大程度上借鉴了柯达Kodachrome正片的成像风格。光线好且光比不大的白天（日出日落时分），或者干净光源下的夜晚，M9的直出JPG确实很有油画的厚重感，但不太靠谱的自动白平衡也经常会让直出色彩偏色严重，尤其拍人时肤色会显得很不自然。
 
-相比之下，M9的DNG文件其实相当可用。虽然动态范围和高感表现被现代CMOS吊打，但低感光度下色彩相当纯净，且这块传感器对绿色，红色和黄色很敏感，经常可以拍出比同场景下CMOS更“深邃细腻”的颜色（或者说，饱和度更高，但相同颜色内部的明暗变化又保持着自然细腻的过渡）。除此之外，即使在DNG里，暗部也经常能捕捉到一层青绿色的影调。可以说这是色偏缺陷，但也可以说，这是相机自带了一层富有电影调色风格的“青橙滤镜”。
+{{< img src="/images/2025/03/12/m9p-back.jpg" title="机身背面" caption="蓝宝石玻璃的屏幕" >}}
+
+相比之下，M9的DNG文件其实相当可用。虽然动态范围和高感表现被现代CMOS吊打，但低感光度下色彩相当纯净，且这块传感器对颜色很敏感（绿色，红色和黄色经常能把我惊艳到），可以拍出比同场景下CMOS更“深邃细腻”的颜色（或者说，饱和度更高，但相同颜色内部的明暗变化又保持着自然细腻的过渡）。除此之外，即使在DNG里，暗部也经常能捕捉到一层青色影调。可以说这是种偏色的缺陷，但也可以说，这是相机自带一层富有电影调色风格的“青橙滤镜”。
 
 # 原理分析
 
-我之前一直把上述这种令人着迷的，类似反转片胶片的成像风格归功于这块柯达CCD的“玄学魔力”。但看过更多资料后，我现在觉得，M9系列出片的独特质感，其实涵盖了很多别的因素，而CCD传感器只是其中之一。如果我们从信号转化的角度来看，以下每一步都影响最后出片的颜色：
+{{< img src="/images/2025/03/12/m9p_e43_1.jpg" title="机身正面" caption="去掉了徕卡红标，正面很干净" >}}
+
+我之前把上述这种令人着迷的，类似Kodachrome胶片的成像风格简单归功于这块柯达CCD的“玄学”。但看过更多资料后，我现在觉得，M9系列出片的独特质感，其实涵盖了很多别的因素，而CCD传感器只是其中之一。如果我们从信号转化的角度来看，以下每一步都影响最后出片的颜色：
 
 1. 首先，成像的光线会先通过镜头的很多片玻璃，不同的玻璃和镀膜，显然会对透过光的颜色产生影响
 2. 其次，在抵达CCD传感器上的光电转换元件之前，出瞳光线还得先穿过一层[特制UVIR滤镜玻璃](https://kolarivision.com/product/leica_m9_repair/)[^4]，这层玻璃不仅起到保护传感器的功能，一般还有着红外线和紫外线截止的滤镜功能，同样会影响颜色
 3. 光线透过上述滤镜玻璃抵达传感器上的光阱，光信号先转化为微弱电信号
 4. 和CMOS不同，[CCD](https://petapixel.com/what-is-ccd-cmos-sensor/)[^5]上的像素转化的微弱电信号是一排接着一排经过同一个模拟信号放大器放大导出，再经过同一个模/数转换器进行数字化（CMOS则在每一个像素点内直接放大电信号，然后又有很多个模/数转化器同时转化并读出数字信号）
-5. 最后，数字信号进入相机内的处理器，经过算法处理成原始RAW文件或者风格化的JPG文件
+5. 最后，数字信号进入相机内的处理器，经过算法处理成原始RAW文件或者风格化的JPG文件（比如高对比度黑白风格）
 
-有时候两步之间甚至会相互作用影响结果。最典型的例子是使用胶片时代的广角镜头时，光线在画面边缘的射入角度往往会非常斜，此时如果传感器前的UVIR滤镜玻璃很厚（例如索尼和佳能的无反相机），那么画面边缘就会出现“崩边”和“红移”的现象：不同波长的倾斜光线穿过厚厚的玻璃会发生不同程度的折射，导致边缘分辨率快速下降变得模糊，且颜色也开始失真，很像笼罩着[一层红晕](https://zhuanlan.zhihu.com/p/93370211)[^6]。相比之下，胶片时代，彩色卷的三基色乳剂内，银盐的光化学反应自带频谱响应曲线，本来就不是全波段的，不需要额外加一层红外紫外截止滤镜，入射角再斜也不成问题。
+有时候两步之间甚至会相互作用影响结果。最典型的例子是使用胶片时代的广角镜头时，光线在传感器边缘的入射角度往往会非常倾斜，此时如果传感器前的UVIR滤镜玻璃很厚（例如索尼和佳能的无反相机），那么画面边缘就会出现“崩边”和“红移”的现象：不同波长的倾斜光线穿过厚厚的玻璃会发生不同程度的折射，导致边缘分辨率快速下降变得模糊，且颜色也开始失真，很像笼罩着[一层红晕](https://zhuanlan.zhihu.com/p/93370211)[^6]。相比之下，胶片时代，彩色卷的三基色乳剂内，银盐的光化学反应自带频谱响应曲线，本来就不是全波段的，不需要额外加一层红外紫外截止滤镜，所以入射角再斜也不成问题。
 
-为了兼容胶片时期的庞大镜头群，徕卡的数码M机都有专门设计的极薄的滤镜保护玻璃。根据[Kolari](https://kolarivision.com/product/leica_m9_repair/)的说法，徕卡最初为M9选择的是透光性能更好的肖特S8612玻璃(之后改为BG55)。但这类玻璃的化学成分天然容易被氧化，所以得加防氧化涂层。可惜M9的这层玻璃太薄，防氧化层依然不能有效保护玻璃，所以在潮湿环境下滤镜玻璃会很快氧化产生“脱膜腐蚀”。除了玻璃本身的氧化问题，CCD ID 3-8的早期传感器还有着粘合剂成分不稳定的现象，粘合剂会慢慢分解，产生酸性物质腐蚀传感器排线，造成不可逆的电路损坏。ID 11之后徕卡更新配方，解决了粘合剂的问题，但只有最后期ID 15/16的传感器才用上防氧化配方的新型肖特玻璃，彻底解决玻璃本身氧化的问题，从根本上杜绝腐蚀脱膜现象的发生。由于玻璃本身配方改变了，所以可以料想，出片的颜色也会因此略微改变。
+{{< img src="/images/2025/03/12/m9p-cl.JPG" title="跟银色CL合影" caption="银色CL更显白" >}}
 
-最后一步，相机处理器的数字信号处理算法本身也对颜色产生巨大影响。当年徕卡官方更换CCD时，会同时升级相机固件。除了单纯的菜单选项或样式的更新，理论上，新固件还可以直接更新信号处理算法，对渲染出来的颜色进行微调，来平衡传感器硬件层面的更改造成的改变。
+为了兼容胶片时期的庞大镜头群，徕卡的数码M机都有专门设计的极薄的滤镜保护玻璃。根据[Kolari](https://kolarivision.com/product/leica_m9_repair/)的说法，徕卡最初为M9选择的是透光性能更好的肖特S8612玻璃(之后改为BG55)。但这类玻璃的化学成分天然容易被氧化，所以得加防氧化涂层。可惜M9的这层玻璃太薄，防氧化层依然不能有效保护玻璃，所以在潮湿环境下滤镜玻璃会很快氧化产生“脱膜腐蚀”。除了玻璃本身的氧化问题，ID为3-8区间的早期传感器还有粘合剂成分不稳定的现象，玻璃和传感器之间的胶水会慢慢分解，产生酸性物质腐蚀传感器排线，造成不可逆的电路损坏。ID 11之后徕卡更新配方，解决了粘合剂的问题，但只有最后期ID 15和16的传感器才用上防氧化配方的新型肖特玻璃，彻底解决玻璃本身氧化的问题，根本上杜绝了腐蚀脱膜现象的发生。由于玻璃本身配方改变了，所以可以料想，出片的颜色也会因此略微改变。
+
+最后一步，相机处理器内的数字信号处理算法本身也对颜色产生巨大影响。当年徕卡官方更换CCD时，会同时升级相机固件。除了单纯的菜单样式的调整，新固件还可能更新了信号处理算法，对渲染出来的颜色进行微调，来平衡更新的硬件造成的物理光学层面的变化。
 
 # 镜头搭配
 
+我很喜欢把老镜头接在M9上。因为老镜头的分辨率本就不高，跟M9系列区区1800万像素的CCD正好匹配（之前在[M11上接老镜头]({{< ref "/posts/2024/12/2024-12-15-leica-m11.zh.md" >}})，就发现6000万像素会放大很多光学瑕疵）。由于没有现代镜头的镀膜技术和非球面技术，很多老镜头出片的反差偏低，但好处却是长而绵密的灰阶过渡，所以正好跟本就对颜色敏感的M9互补。
+
+考虑到M9的高感不强，目前的挂机头是一枚[银色的Summilux 50 1.4 E43]({{< ref "/posts/2024/11/2024-11-12-leica-summilux-50-e43-v2.zh.md" >}})，大光圈小体积，装上的感觉很和谐。
+
+{{< img src="/images/2025/03/12/m9p_e43.jpg" title="绝配E43" caption="出片的氛围和颜色都是一绝" >}}
+
+如果想要图轻便，也会换成小巧玲珑的[禄来40 2.8 Sonnar]({{< ref "/posts/2024/08/2024-08-05-rollei-sonnar-40-ltm.zh.md" >}})。
+
+{{< img src="/images/2025/03/12/m9p-m3.jpg" title="跟老祖宗m3合影" caption="禄来接在M9P上相当小巧" >}}
+
+除此之外，还有更邪道的玩法：靠黄斑联动的转接环使用单反镜头拍摄。我试过转接[福伦达Septon]({{< ref "/posts/2022/09/2022-09-19-voigtlander-septon.zh.md" >}})和[蔡司凹玉Ultron]({{< ref "/posts/2024/01/2024-01-15-zeiss-ultron.zh.md" >}})，效果都蛮不错。
+
+{{< img src="/images/2025/03/12/m9p-septon.jpg" title="原福Septon" caption="这枚镜头突出一个润" >}}
+{{< img src="/images/2025/03/12/m9p-ultron.JPG" title="蔡司凹玉" caption="素质很不错的老镜头" >}}
+
+
+# 实拍样片
+
+## Summilux 50mm f/1.4 E43
+
+由于CCD ID和固件版本跟上一台M9一样一样，出片可直接参考[之前这篇介绍E43的文章]({{< ref "/posts/2024/11/2024-11-12-leica-summilux-50-e43-v2.zh.md" >}})。这里贴几张E43挂M9上的样片。
+
+{{< img src="/gallery/digital/2024/08/11/leica_m9_summilux_e43-1009920.JPG" title="徕卡E43" caption="机身M9" >}}
+{{< img src="/gallery/digital/2024/08/11/leica_m9_summilux_e43-1009939.JPG" title="徕卡E43" caption="机身M9" >}}
+{{< img src="/gallery/digital/2024/08/11/leica_m9_summilux_e43-1009944.JPG" title="徕卡E43" caption="机身M9" >}}
+
+{{< img src="/gallery/digital/2024/10/14/leica_m9_e43-1010426.jpg" title="徕卡E43" caption="机身M9" >}}
+{{< img src="/gallery/digital/2024/10/14/leica_m9_e43-1010454.jpg" title="徕卡E43" caption="机身M9" >}}
+{{< img src="/gallery/digital/2024/10/14/leica_m9_e43-1010529.jpg" title="徕卡E43" caption="机身M9" >}}
+{{< img src="/gallery/digital/2024/10/14/leica_m9_e43-1010530.jpg" title="徕卡E43" caption="机身M9" >}}
+
+
+## Rollei Sonnar 40mm f/2.8 HFT
+
+{{< img src="/gallery/digital/2025/03/08/Leica_M9P_Rollei_40_2_8_hft-9985562.jpg" title="禄来40 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/Leica_M9P_Rollei_40_2_8_hft-9985610.jpg" title="禄来40 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/Leica_M9P_Rollei_40_2_8_hft-9985642.jpg" title="禄来40 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/Leica_M9P_Rollei_40_2_8_hft-9985659.jpg" title="禄来40 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/Leica_M9P_Rollei_40_2_8_hft-9985676.jpg" title="禄来40 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/Leica_M9P_Rollei_40_2_8_hft-9985863.jpg" title="禄来40 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/Leica_M9P_Rollei_40_2_8_hft-9985865.jpg" title="禄来40 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/Leica_M9P_Rollei_40_2_8_hft-9985876.jpg" title="禄来40 2.8" caption="机身M9P" >}}
+
+
+## Voigtlander Septon 50mm f/2
+
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985899.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985904.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985905.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985907.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985908.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985910.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985917.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985925.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985935.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985941.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985951.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985952.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985960.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985964.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985966.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985971.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985972.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/03/08/leica_m9p_voigtlander_septon-9985974.jpg" title="福伦达赛破铜" caption="机身M9P" >}}
+
+
+## Zeiss Ultron 50mm f/1.8
+
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zeiss_ultron-9985354.jpg" title="蔡司凹玉" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zeiss_ultron-9985362.jpg" title="蔡司凹玉" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zeiss_ultron-9985372.jpg" title="蔡司凹玉" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zeiss_ultron-9985391.jpg" title="蔡司凹玉" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zeiss_ultron-9985406.jpg" title="蔡司凹玉" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zeiss_ultron-9985409.jpg" title="蔡司凹玉" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zeiss_ultron-9985411.jpg" title="蔡司凹玉" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zeiss_ultron-9985412.jpg" title="蔡司凹玉" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zeiss_ultron-9985416.jpg" title="蔡司凹玉" caption="机身M9P" >}}
+
+## Zeiss ZM 25mm f/2.8
+
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zm_25-9985314.jpg" title="蔡司ZM 25 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zm_25-9985323.jpg" title="蔡司ZM 25 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zm_25-9985332.jpg" title="蔡司ZM 25 2.8" caption="机身M9P" >}}
+{{< img src="/gallery/digital/2025/02/24/leica_m9p_zm_25-9985329.jpg" title="蔡司ZM 25 2.8" caption="机身M9P" >}}
 
 
 [^1]: [徕卡M9初体验]({{< ref "/posts/2018/06/2018-06-02-a-sip-of-leica-m9.zh.md" >}})
