--- a/content/posts/2025/03/2025-03-12-leica-m9p.zh.md
+++ b/content/posts/2025/03/2025-03-12-leica-m9p.zh.md
@@ -49,7 +49,7 @@ featured_image: 2025/03/12/m9p.jpg
 
 # 颜色调教
 
-徕卡和柯达当年合作推出M9系列时，依然处在胶片摄影向数码摄影过渡的时期。据说，为了吸引庞大而顽固的徕卡胶片死忠用户，这台M9的直出色彩调教很大程度上借鉴了柯达Kodachrome正片的成像风格。光线好且光比不大的白天（日出日落时分），或者干净光源下的夜晚，M9的直出JPG确实很有油画的厚重感，但不太靠谱的自动白平衡也经常会让直出色彩偏色严重，尤其拍人时肤色会显得很不自然。
+徕卡和柯达当年合作推出M9系列时，依然处在胶片摄影向数码摄影过渡的时期。据说，为了吸引庞大而顽固的徕卡胶片死忠用户群，这台M9的直出色彩调教很大程度上借鉴了柯达Kodachrome正片的成像风格。光线好且光比不大的白天（日出日落时分），或者干净光源下的夜晚，M9的直出JPG确实很有油画的厚重感，但不太靠谱的自动白平衡也经常会让直出色彩偏色严重，尤其拍人时肤色会显得很不自然。
 
 {{< img src="/images/2025/03/12/m9p-back.jpg" title="机身背面" caption="蓝宝石玻璃的屏幕" >}}
 
