--- a/content/posts/2025/03/2025-03-12-leica-m9p.zh.md
+++ b/content/posts/2025/03/2025-03-12-leica-m9p.zh.md
@@ -97,7 +97,7 @@ featured_image: 2025/03/12/m9p.jpg
 
 ## Summilux 50mm f/1.4 E43
 
-由于CCD ID和固件版本跟上一台M9一样一样，出片可直接参考[之前这篇介绍E43的文章]({{< ref "/posts/2024/11/2024-11-12-leica-summilux-50-e43-v2.zh.md" >}})。这里贴几张E43挂M9上的样片。
+由于CCD ID和固件版本跟上一台M9一模一样，出片可直接参考[之前这篇介绍E43的文章]({{< ref "/posts/2024/11/2024-11-12-leica-summilux-50-e43-v2.zh.md" >}})。这里贴几张E43挂M9上的样片。
 
 {{< img src="/gallery/digital/2024/08/11/leica_m9_summilux_e43-1009920.JPG" title="徕卡E43" caption="机身M9" >}}
 {{< img src="/gallery/digital/2024/08/11/leica_m9_summilux_e43-1009939.JPG" title="徕卡E43" caption="机身M9" >}}
