--- a/content/posts/2025/06/2025-06-18-pentax-k1-ii.zh.md
+++ b/content/posts/2025/06/2025-06-18-pentax-k1-ii.zh.md
@@ -1,5 +1,5 @@
 ---
-title: "宾得Pentax K-1ii：捡了半台富士"
+title: "宾得Pentax K-1ii：富士的四分之一"
 date: 2025-06-18T23:27:13-04:00
 series:
 - camera
@@ -20,7 +20,7 @@ slug: "2025 06 18 Pentax K1 Ii"
 featured_image: 2025/06/18/k1-lenses.jpeg
 ---
 
-只要富士X Half的一半，不如就叫X Quarter吧。
+只要富士X Half的一半，不如就叫它X Quarter吧。
 <!--more-->
 
 # 一半的一半
