--- a/content/posts/2025/06/2025-06-18-pentax-k1-ii.zh.md
+++ b/content/posts/2025/06/2025-06-18-pentax-k1-ii.zh.md
@@ -20,12 +20,12 @@ slug: "2025 06 18 Pentax K1 Ii"
 featured_image: 2025/06/18/k1-lenses.jpeg
 ---
 
-只要富士X Half的一半，不如就叫它X Quarter吧。
+只要富士X Half的一半，不如就叫它X Quarter😼
 <!--more-->
 
 # 一半的一半
 
-最近逛eBay，无意间刷到这台“AS IS”的待修k-1ii，售价还不到$400，看描述说是SD卡槽坏了需要更换主板，还有屏幕也坏了。我想着反正不贵就当买个盲盒，自己修不好再退也不迟。要知道这价格甚至还不到最近富士新出的X Half（B&H官方售价$849）的一半，不如叫它（penta）X Quarter好了。
+最近逛eBay，无意间刷到这台“AS IS”的待修k-1ii，售价还不到$400，看描述说是SD卡槽坏了需要更换主板，还有屏幕也坏了。我想着反正不贵就当买个盲盒，自己修不好再退也不迟。要知道这价格甚至还不到最近富士新出的X Half（B&H官方售价$849）的一半，不如叫它（penta）X Quarter好了😼。
 
 {{< img src="/images/2025/06/18/k1-ebay.jpg" title="eBay商品描述" caption="这价格还要什么自行车。而且凭我对宾得三防的认识，我感觉还有救">}}
 
