--- a/content/posts/2025/06/2025-06-18-pentax-k1-ii.zh.md
+++ b/content/posts/2025/06/2025-06-18-pentax-k1-ii.zh.md
@@ -49,7 +49,7 @@ K-1ii的机身又高又厚又重，失去了胶片时代“小而美”的精致
 
 {{< img src="/images/2025/06/18/k1-enna.jpeg"  title="转接M42" caption="Enna 24 f4">}}
 
-最大的问题，依然是宾得祖传的“对不上焦”——不是速度，而是说精度：我很习惯使用手动对焦的旁轴和胶片单反，且没有追焦连拍的需求，所以对我来说K1ii的自动对焦够快了，但问题是这台k1ii有时会跑焦：用系统菜单里的“AF 微調”针对每一枚镜头精调后，基本可以解决跑焦问题，但我发现跑焦的数值会随时间和外出使用而漂移，最好定期检查更新常用镜头的微调数值（比如接大公主我最开始设置的微调数值是“-10”，出了一趟门回来后发现得更新为“-6”）。我猜测可能跟宾得老旧的螺丝刀传动式自动对焦方式有关。
+最大的问题，依然是宾得祖传的“对不上焦”——不是速度，而是说精度：我很习惯使用手动对焦的旁轴和胶片单反，且没有追焦连拍的需求，所以对我来说K1ii的自动对焦够快了，但问题是这台k1ii有时会跑焦：用系统菜单里的“AF 微調”针对每一枚镜头精调后，基本可以解决跑焦问题，但我发现跑焦的数值会随时间和外出使用而漂移，最好定期检查更新常用镜头的微调数值（比如接大公主我最开始设置的微调数值是“-10”，出了一趟门回来后发现得更新为“-6”）。
 
 {{< img src="/images/2025/06/18/k1-quinon.jpg"  title="转接M42" caption="Steinheil Quinon 55 f1.9">}}
 
